--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^7.3"
+  },
+  "scripts": {
+    "check-cs": "vendor/bin/ecs check --ansi"
   }
 }
