--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,11 @@
     }
   },
   "require-dev": {
-    "symplify/easy-coding-standard": "^7.3"
+    "symplify/easy-coding-standard": "^7.3",
+    "phpstan/phpstan": "^0.12"
   },
   "scripts": {
-    "check-cs": "vendor/bin/ecs check --ansi"
+    "check-cs": "vendor/bin/ecs check --ansi",
+    "phpstan": "vendor/bin/phpstan analyse --ansi"
   }
 }
