--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "license": "GPL-2.0+",
   "require": {
-    "php": ">=7.0.0 <=7.4"
+    "php": "^7.2.4"
   },
   "autoload": {
     "psr-4": {
