Test ter upload workflow

--- a/.github/workflows/ter.yaml
+++ b/.github/workflows/ter.yaml
@@ -1,4 +1,4 @@
-name: Upload to TYPO3 ter
+name: Release
 
 on:
   push:
@@ -6,13 +6,13 @@ on:
       - '*'
 
 jobs:
-  ter:
+  release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - uses: the-coding-owl/action-typo3-extension-repository-upload@0.0.1
-          env:
-            SECRET_USERNAME: ${{ secrets.t3username }}
-            SECRET_PASSWORD: ${{ secrets.t3password }}
-            EXTENSION_KEY: 'apensoap'
-            UPLOAD_MESSAGE: 'Automatic release built from GitHub. See the CHANGELOG.md file that is shipped with this release for details.'
+        env:
+          SECRET_USERNAME: ${{ secrets.t3username }}
+          SECRET_PASSWORD: ${{ secrets.t3password }}
+          EXTENSION_KEY: 'apensoap'
+          UPLOAD_MESSAGE: 'Automatic release built from GitHub. See the CHANGELOG.md file that is shipped with this release for details.'
