Test ter upload workflow

--- a/.github/workflows/ter.yaml
+++ b/.github/workflows/ter.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: the-coding-owl/action-typo3-extension-repository-upload@0.0.1
         env:
-          SECRET_USERNAME: ${{ secrets.t3username }}
-          SECRET_PASSWORD: ${{ secrets.t3password }}
+          SECRET_USERNAME: ${{ secrets.USERNAME }}
+          SECRET_PASSWORD: ${{ secrets.PASSWORD }}
           EXTENSION_KEY: 'apensoap'
           UPLOAD_MESSAGE: 'Automatic release built from GitHub. See the CHANGELOG.md file that is shipped with this release for details.'
